# viercc.github.io

blog/: about.html  archive.html  contact.html  index.html  pdfs.html  softwares.html
haddocks/: ApplicativeGen.html  ApplicativeLaws.html  C.html  (+34 more)
site-too-lazy-to-evaluate/: .gitignore  about.rst  contact.markdown  deployCommand  index.html  site-too-lazy-to-evaluate.cabal  site.hs  stack.yaml
site-too-lazy-to-evaluate/css/: default.css  syntax.css
site-too-lazy-to-evaluate/posts/: 2018-12-09-matchable.md  2018-12-10-lambdabox.md  2018-12-18-reflection-trick.md  2018-12-29-about-align.md  2019-11-15-non-monads-addendum.md  2019-11-15-non-monads.md  2019-11-19-monads-more.md  2019-12-15-monads-more.md  2019-12-16-fixed-proof-for-monads-more.md  2020-02-29-commutative-monad-appendix.md  2020-02-29-commutative-monad.md  2020-05-25-applicatives.md  2020-05-30-applicatives.md  2020-07-25-found-counterexample.md  2020-08-07-monoid.md  2020-08-18-fmonad.md  2020-08-21-breadth-first.md  2020-08-23-fmonad.md  2020-09-02-my-net-troubleshooting.md  2020-11-25-faccat.md  2020-12-31-faccat2.md  2021-01-01-faccat2.md  2021-01-08-heyting-store.md  2021-05-12-applicative-classify.md  2021-05-12-string-diagram.md  2021-05-17-string-diagram.md  2021-05-24-string-2.md  string-3.md
site-too-lazy-to-evaluate/posts/botsu/: 2021-01-08-heyting-store.md
site-too-lazy-to-evaluate/posts/stub/: 2020-08-21-fmonad.md  2021-01-xx.md  2021-05-24-string-2.md  2021-05-xx-string-2.md  applicative-classify.md  string-3.md
site-too-lazy-to-evaluate/templates/: default.html  math.html  post.html
(+605 files in other folders)
