cabal-version:      2.0
name:               site-too-lazy-to-evaluate
version:            0.1.0.0
build-type:         Simple

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll ^>=4.14
                  , pandoc
                  , mtl
                  , time
  ghc-options:      -threaded
  default-language: Haskell2010
